fix: alignment

--- a/static/styles/rewards/pay.css
+++ b/static/styles/rewards/pay.css
@@ -36,7 +36,6 @@ main {
   max-width: 100vw;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
